src/scss/_header.scss
//
// Header
//

.header {
  color: green;
  background-color: rgba(0, 255, 0, .1);

  &__wrapper {
    @include wrapper();
  }

  &__items {
    @include row-flex();
  }

  &__item {
    @include col();
    @include size(12);
    @include size-xs(6);
    @include size-sm(3);
    //@include size-md(3);
    //@include size-lg(3);

    background-color: rgba(255, 255, 0, 1);
  }
}

.logo {

  &__img {
    min-height: 50px;
  }
}

